--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="app.js"></script>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
   <script src="mapwrapper.js"></script>
   <script src="wordcloud.js"></script>
   <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
@@ -16,6 +18,8 @@
   <header>
     <div class="container">
       <h1>weather</h1>
+      <img src="/britcloud.jpg">
+      <img src="/tea.jpg">
       <img src="/manumbrella.jpeg">
     </div>
   </header>
@@ -26,6 +30,10 @@
         <option>hi</option>
       </select>
   <button>get the weather</button>
+  <h2 id="weather-today"><h2>
+  <p id="temp-today"></p>
+  <img id="image-weather-today">
+  <div id="word-cloud"></div>
 </div>
   <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/367093184&amp;color=#000000;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
   </main>
