basic info from api

--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
   <main>
     <div>
       <input type="text">
+      <div id="main-map"></div>
+      
       <select>
-        <option>hi</option>
+        <option>What's your favourite weather?</option>
+        <option>Sunny</option>
+        <option>Cloudy</option>
+        <option>Sunshine and Showers</option>
+        <option>Bright and breezy</option>
+        <option>Rainy</option>
+        <option>Stormy</option>
+        <option>Snowy</option>
       </select>
   <button>get the weather</button>
   <h2 id="weather-today"><h2>
