replace datalist with select, attempt to make map change location

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
       <input type="text">
 
       <div id="main-map"></div>
+      <div id="second-map"></div>
       <p>
       <label>Choose a global city from this list:
-      <input id="city-input" list="cities"/></label>
-        <datalist id="cities">
-          <option id="19344" value="Edinburgh">
+      <select id="city-input"></label>
+        <option value="">select a city</option>
+          <option id="19344" value="19344">Edinburgh</option>
           <option id="19344" value="London">
           <option id="19344" value="Dublin">
           <option id="19344" value="Paris">
@@ -70,7 +71,7 @@
           <option id="" value="Bangkok">
           <option id="" value="Singapore">
           <option id="" value="Saigon">
-          <option id="" value="Mumbai">
+          <!-- <option id="" value="Mumbai">
           <option id="" value="New Delhi">
           <option id="" value="Jakarta">
           <option id="" value="Rio De Janeiro">
@@ -82,8 +83,8 @@
           <option id="" value="Tel Aviv">
           <option id="" value="Mumbai">
           <option id="" value="Delhi">
-          <option id="" value="Jakarta">
-        </datalist>
+          <option id="" value="Jakarta"> -->
+        </select>
       <button id="city-btn">Go!</button>
       <select>
         <option>What's your favourite weather?</option>
