--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src="openmap.js"></script>
   <script src="wordcloud.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Open+Sans" rel="stylesheet">
+
   <title>Weather</title>
 </head>
 
