--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Open+Sans" rel="stylesheet">
 
-  <title>Weather</title>
+  <title>WeatherChat</title>
 </head>
 
 <body>
 
   <header>
     <div class="container">
-      <h1>weather</h1>
+      <h1>WeatherChat</h1>
       <img id="cloudImage" src="/britcloud.jpg">
       <img id="teacupImage" src="/tea.jpg">
       <img id="umbrellaImage" src="/manumbrella.jpeg">
@@ -35,8 +35,25 @@
 
   <main>
     <div>
-      <input type="text">
-
+    <select>
+      <option>What's your favourite weather?</option>
+      <option>Sunny</option>
+      <option>Cloudy</option>
+      <option>Sunshine and Showers</option>
+      <option>Bright and breezy</option>
+      <option>Rainy</option>
+      <option>Stormy</option>
+      <option>Snowy</option>
+    </select>
+    <button>get the weather</button>
+    <h2 id="city-name"></h2>
+    <p id="time"><p>
+    <h2 id="weather-today"><h2>
+    <p id="temp-today"></p>
+    <img id="image-weather-today">
+    <div id="word-cloud"></div>
+      <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/367093184&amp;color=#000000;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+    <hr />
       <div id="main-map"></div>
       <div id="second-map"></div>
       <p>
@@ -87,26 +104,9 @@
           <option id="" value="Delhi">
           <option id="" value="Jakarta"> -->
         </select>
-        <hr/>
-      <select>
-        <option>What's your favourite weather?</option>
-        <option>Sunny</option>
-        <option>Cloudy</option>
-        <option>Sunshine and Showers</option>
-        <option>Bright and breezy</option>
-        <option>Rainy</option>
-        <option>Stormy</option>
-        <option>Snowy</option>
-      </select>
-  <button>get the weather</button>
-  <h2 id="city-name"></h2>
-  <p id="time"><p>
-  <h2 id="weather-today"><h2>
-  <p id="temp-today"></p>
-  <img id="image-weather-today">
-  <div id="word-cloud"></div>
-</div>
-  <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/367093184&amp;color=#000000;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+
+
+    </div>
   </main>
   <footer>
 
