map remove incorporated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p id="temp-today"></p>
     <img id="image-weather-today">
     <div id="word-cloud"></div>
-      <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/367093184&amp;color=#000000;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+      <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src=""></iframe>
     <hr />
       <div id="main-map"></div>
       <div id="second-map"></div>
