--- a/index.html
+++ b/index.html
@@ -60,36 +60,33 @@
       <label>Choose a global city from this list:
       <select id="city-input"></label>
         <option value="">select a city</option>
-          <option id="19344" value="19344">Edinburgh</option>
-          <option id="19344" value="London">
-          <option id="19344" value="Dublin">
-          <option id="19344" value="Paris">
-          <option id="19344" value="Madrid">
-          <option id="19344" value="Berlin">
-          <option id="" value="Rome">
-          <option id="" value="Zurich">
-          <option id="" value="Brussels">
-          <option id="" value="Helsinki">
-          <option id="" value="Copenhagen">
-          <option id="" value="Warsaw">
-          <option id="" value="Moscow">
-          <option id="" value="Reykjavik">
-          <option id="" value="New York">
-          <option id="" value="Los Angeles">
-          <option id="" value="Tokyo">
-          <option id="" value="Seoul">
-          <option id="" value="Beijing">
-          <option id="" value="Dubai">
-          <option id="" value="Istanbul">
-          <option id="" value="Johannesburg">
-          <option id="" value="Cairo">
-          <option id="" value="Auckland">
-          <option id="" value="Sydney">
-          <option id="" value="Hong Kong">
-          <option id="" value="Shanghai">
-          <option id="" value="Bangkok">
-          <option id="" value="Singapore">
-          <option id="" value="Saigon">
+          <option value="19344">Edinburgh</option>
+          <option value="44418">London</option>
+          <option value="560743">Dublin</option>
+          <option value="638242">Berlin</option>
+          <option value="721943">Rome</option>
+          <option value="784794">Zurich</option>
+          <option value="565346">Helsinki</option>
+          <option value="554890">Copenhagen</option>
+          <option value"523920">Warsaw</option>
+          <option value"2122265">Moscow</option>
+          <option value="980389">Reykjavik</option>
+          <option value="2459115">New York</option>
+          <option value"2442047">Los Angeles</option>
+          <option value="1118370">Tokyo</option>
+          <option value="1132599">Seoul</option>
+          <option value="2151330">Beijing</option>
+          <option value="1940345">Dubai</option>
+          <option value="2344116">Istanbul</option>
+          <!-- <option value="nesb">Johannesburg</option>
+          <option value="">Cairo</option>
+          <option value="">Auckland</option>
+          <option value">Sydney</option>
+          <option value="K">Hong Kong</option>
+          <option value="">Shanghai</option>
+          <option value=">Bangkok</option>
+          <option value=""">Singapore</option>
+          <option value=""">Saigon</option> -->
           <!-- <option id="" value="Mumbai">
           <option id="" value="New Delhi">
           <option id="" value="Jakarta">
