begin sequence of clicks

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <header>
     <div class="container">
-      <h1>WeatherChat</h1>
       <img id="cloudImage" src="/britcloud.jpg">
+      <h1>WeatherChat</h1>
       <img id="teacupImage" src="/tea.jpg">
       <img id="umbrellaImage" src="/manumbrella.jpeg">
     </div>
@@ -35,78 +35,80 @@
 
   <main>
     <div>
-    <select>
-      <option>What's your favourite weather?</option>
-      <option>Sunny</option>
-      <option>Cloudy</option>
-      <option>Sunshine and Showers</option>
-      <option>Bright and breezy</option>
-      <option>Rainy</option>
-      <option>Stormy</option>
-      <option>Snowy</option>
-    </select>
-    <button>get the weather</button>
-    <h2 id="city-name"></h2>
-    <p id="time"><p>
-    <h2 id="weather-today"><h2>
-    <p id="temp-today"></p>
-    <img id="image-weather-today">
-    <div id="word-cloud"></div>
-      <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src=""></iframe>
-    <hr />
-      <div id="main-map"></div>
-      <div id="second-map"></div>
-      <p>
-      <label>Choose a global city from this list:
-      <select id="city-input"></label>
-        <option value="">select a city</option>
-          <option value="19344">Edinburgh</option>
-          <option value="44418">London</option>
-          <option value="560743">Dublin</option>
-          <option value="638242">Berlin</option>
-          <option value="721943">Rome</option>
-          <option value="784794">Zurich</option>
-          <option value="565346">Helsinki</option>
-          <option value="554890">Copenhagen</option>
-          <option value"523920">Warsaw</option>
-          <option value"2122265">Moscow</option>
-          <option value="980389">Reykjavik</option>
-          <option value="2459115">New York</option>
-          <option value"2442047">Los Angeles</option>
-          <option value="1118370">Tokyo</option>
-          <option value="1132599">Seoul</option>
-          <option value="2151330">Beijing</option>
-          <option value="1940345">Dubai</option>
-          <option value="2344116">Istanbul</option>
-          <!-- <option value="nesb">Johannesburg</option>
-          <option value="">Cairo</option>
-          <option value="">Auckland</option>
-          <option value">Sydney</option>
-          <option value="K">Hong Kong</option>
-          <option value="">Shanghai</option>
-          <option value=">Bangkok</option>
-          <option value=""">Singapore</option>
-          <option value=""">Saigon</option> -->
-          <!-- <option id="" value="Mumbai">
-          <option id="" value="New Delhi">
-          <option id="" value="Jakarta">
-          <option id="" value="Rio De Janeiro">
-          <option id="" value="Bogota">
-          <option id="" value="Sao Paolo">
-          <option id="" value="Buenos Aires">
-          <option id="" value="Mexico City">
-          <option id="" value="Kuala Lumpur">
-          <option id="" value="Tel Aviv">
-          <option id="" value="Mumbai">
-          <option id="" value="Delhi">
-          <option id="" value="Jakarta"> -->
-        </select>
-
-
+      <select>
+        <option>What's your favourite weather?</option>
+        <option>Sunny</option>
+        <option>Cloudy</option>
+        <option>Sunshine and Showers</option>
+        <option>Bright and breezy</option>
+        <option>Rainy</option>
+        <option>Stormy</option>
+        <option>Snowy</option>
+      </select>
+      <button id="get the weather">Get the weather</button>
     </div>
-  </main>
-  <footer>
+    <div id="display">
+      <h2 id="city-name"></h2>
+      <p id="time"><p>
+        <h2 id="weather-today"><h2>
+          <p id="temp-today"></p>
+          <img id="image-weather-today">
+          <div id="word-cloud"></div>
+          <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src=""></iframe>
+          <hr />
+          <div id="main-map"></div>
+          <div id="second-map"></div>
+          <p>
+            <label>Choose a global city from this list:
+              <select id="city-input"></label>
+                <option value="">select a city</option>
+                <option value="19344">Edinburgh</option>
+                <option value="44418">London</option>
+                <option value="560743">Dublin</option>
+                <option value="638242">Berlin</option>
+                <option value="721943">Rome</option>
+                <option value="784794">Zurich</option>
+                <option value="565346">Helsinki</option>
+                <option value="554890">Copenhagen</option>
+                <option value"523920">Warsaw</option>
+                <option value"2122265">Moscow</option>
+                <option value="980389">Reykjavik</option>
+                <option value="2459115">New York</option>
+                <option value"2442047">Los Angeles</option>
+                <option value="1118370">Tokyo</option>
+                <option value="1132599">Seoul</option>
+                <option value="2151330">Beijing</option>
+                <option value="1940345">Dubai</option>
+                <option value="2344116">Istanbul</option>
+                <!-- <option value="nesb">Johannesburg</option>
+                <option value="">Cairo</option>
+                <option value="">Auckland</option>
+                <option value">Sydney</option>
+                <option value="K">Hong Kong</option>
+                <option value="">Shanghai</option>
+                <option value=">Bangkok</option>
+                <option value=""">Singapore</option>
+                <option value=""">Saigon</option> -->
+                <!-- <option id="" value="Mumbai">
+                <option id="" value="New Delhi">
+                <option id="" value="Jakarta">
+                <option id="" value="Rio De Janeiro">
+                <option id="" value="Bogota">
+                <option id="" value="Sao Paolo">
+                <option id="" value="Buenos Aires">
+                <option id="" value="Mexico City">
+                <option id="" value="Kuala Lumpur">
+                <option id="" value="Tel Aviv">
+                <option id="" value="Mumbai">
+                <option id="" value="Delhi">
+                <option id="" value="Jakarta"> -->
+              </select>
 
-  </footer>
-</body>
+
+            </div>
+          </main>
+          <footer>
+
+          </footer>
+        </body>
 </html>
