add styling and remove child

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <header>
-    <div class="container">
+    <div class="container" id="title">
       <img id="cloudImage" src="/britcloud.jpg">
       <h1>WeatherChat</h1>
       <img id="teacupImage" src="/tea.jpg">
@@ -45,10 +45,11 @@
         <option>Stormy</option>
         <option>Snowy</option>
       </select>
-      <button id="get the weather">Get the weather</button>
+      <button id="get-weather">Get the weather</button>
     </div>
     <div id="display">
       <h2 id="city-name"></h2>
+      <h3 id="country-name"><h3>
       <p id="time"><p>
         <h2 id="weather-today"><h2>
           <p id="temp-today"></p>
