--- a/index.html
+++ b/index.html
@@ -71,38 +71,35 @@
                 <option value="784794">Zurich</option>
                 <option value="565346">Helsinki</option>
                 <option value="554890">Copenhagen</option>
-                <option value"523920">Warsaw</option>
-                <option value"2122265">Moscow</option>
+                <option value="523920">Warsaw</option>
+                <option value="2122265">Moscow</option>
                 <option value="980389">Reykjavik</option>
                 <option value="2459115">New York</option>
-                <option value"2442047">Los Angeles</option>
+                <option value="2442047">Los Angeles</option>
                 <option value="1118370">Tokyo</option>
                 <option value="1132599">Seoul</option>
                 <option value="2151330">Beijing</option>
                 <option value="1940345">Dubai</option>
                 <option value="2344116">Istanbul</option>
-                <!-- <option value="nesb">Johannesburg</option>
-                <option value="">Cairo</option>
-                <option value="">Auckland</option>
-                <option value">Sydney</option>
-                <option value="K">Hong Kong</option>
-                <option value="">Shanghai</option>
-                <option value=">Bangkok</option>
-                <option value=""">Singapore</option>
-                <option value=""">Saigon</option> -->
-                <!-- <option id="" value="Mumbai">
-                <option id="" value="New Delhi">
-                <option id="" value="Jakarta">
-                <option id="" value="Rio De Janeiro">
-                <option id="" value="Bogota">
-                <option id="" value="Sao Paolo">
-                <option id="" value="Buenos Aires">
-                <option id="" value="Mexico City">
-                <option id="" value="Kuala Lumpur">
-                <option id="" value="Tel Aviv">
-                <option id="" value="Mumbai">
-                <option id="" value="Delhi">
-                <option id="" value="Jakarta"> -->
+                <option value="1582504">Johannesburg</option>
+                <option value="1521894">Cairo</option>
+                <option value="2348079">Auckland</option>
+                <option value="1105779">Sydney</option>
+                <option value="24865698">Hong Kong</option>
+                <option value="2151849">Shanghai</option>
+                <option value="1225448">Bangkok</option>
+                <option value="23424948">Singapore</option>
+                <option value="1252431">Saigon</option>
+                <option value="2295411">Mumbai</option>
+                <option value="2295019">New Delhi</option>
+                <option value="1047378">Jakarta"</option>
+                <option value="455825">Rio De Janeiro</option>/option>
+                <option value="368148">Bogota</option>
+                <option value="455827">Sao Paolo</option>
+                <option value="468739">Buenos Aires</option>
+                <option value="116545">Mexico City</option>
+                <option value="1154781">Kuala Lumpur</option>
+                <option value="1968212">Tel Aviv</option>
               </select>
 
 
