fix images, and link with if statement

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
   <header>
     <div class="container" id="title">
-      <img id="cloudImage" src="/britcloud.jpg">
+      <img id="cloudImage" src="images/britcloud.jpg">
       <h1 id="maintitle">WeatherChat</h1>
-      <img id="teacupImage" src="/tea.jpg">
-      <img id="umbrellaImage" src="/manumbrella.jpeg">
+      <img id="teacupImage" src="images/tea.jpg">
+      <img id="umbrellaImage" src="images/manumbrella.jpeg">
     </div>
   </header>
 
@@ -49,8 +49,10 @@
       </select>
       <button id="get-weather">Get the weather</button>
     </div>
-    <div id="greet">
+    <div id="greet" class="container">
+  <img id="talking" src="">
       <h4 id="message"></h4>
+
     </div>
     <div id="display" class="container">
 
