--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <option>Stormy</option>
         <option>Snowy</option>
       </select>
-      <button id="get-weather">Get the weather</button>
+      <button id="get-weather">Get the forecast!</button>
     </div>
     <div id="greet" class="container">
   <img id="talking" src="">
@@ -106,9 +106,8 @@
                 <option value="2151849">Shanghai</option>
                 <option value="1225448">Bangkok</option>
                 <option value="1252431">Saigon</option>
-                <option value="2295019">New Delhi</option>
                 <option value="1047378">Jakarta"</option>
-                <option value="455825">Rio De Janeiro</option>/option>
+                <option value="455825">Rio De Janeiro</option>
                 <option value="368148">Bogota</option>
                 <option value="455827">Sao Paolo</option>
                 <option value="468739">Buenos Aires</option>
