--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <img id="image-weather-today" alt="weather today">
             </div>
             <div>
-              <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="no" style="" src=""></iframe>
+              <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="yes" style="white" src=""></iframe>
             </div>
             <div id="word-cloud"></div>
           </div>
