required added to input

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <img id="cloudImage" src="images/britcloud.jpg" alt="cloud">
       <h1 id="maintitle">WeatherChat</h1>
       <img id="teacupImage" src="images/tea.jpg" alt="teacup">
-      <img id="umbrellaImage" src="images/manumbrella.jpeg" alt"man holding umbrella">
+      <img id="umbrellaImage" src="images/manumbrella.jpeg" alt="man holding umbrella">
     </div>
   </header>
 
   <main>
     <div id="question-list" class="column">
-      <input id="name" type="text" placeholder="What's your name?"/>
-      <select id="preferred-weather">
+      <input id="name" type="text" placeholder="What's your name?" required/>
+      <select id="preferred-weather" required>
         <option>What's your favourite weather?</option>
         <option>Sunny</option>
         <option>Cloudy</option>
@@ -117,7 +117,7 @@
             </div>
           </section>
         </main>
-        <footer class= "container">
+        <footer class="container">
           <p id="footer">WeatherChat - powered by MetaWeather, Leaflet, OSM</p>
         </footer>
     </body>
