--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <main>
     <div id="question-list" class="column">
       <input id="name" type="text" placeholder="What's your name?" required/>
-      <select id="preferred-weather" required>
+      <select name="weather" id="preferred-weather" required>
         <option>What's your favourite weather?</option>
         <option>Sunny</option>
         <option>Cloudy</option>
