--- a/index.html
+++ b/index.html
@@ -51,35 +51,32 @@
       <button id="get-weather">Get the forecast!</button>
 
     </div>
+
     <div id="greet" class="container">
       <img id="talking" src="">
       <h4 id="message"></h4>
-
     </div>
+
     <div id="display" class="container">
 
       <div id="data">
         <h1 id="city-name"></h1>
         <h3 id="country-name"><h3>
-          <p id="time"></p>
-          <h1 id="weather-today"><h1>
-            <p id="temp-max"></p>
-            <p id="temp-min"></p>
-          </div>
-          <div class="container" id="extras">
-            <div>
-              <img id="image-weather-today" alt="weather today">
-            </div>
-            <div>
-              <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="yes" style="white" src=""></iframe>
-            </div>
+        <p id="time"></p>
+        <h1 id="weather-today"><h1>
+        <p id="temp-max"></p>
+        <p id="temp-min"></p>
+      </div>
+      <div class="container" id="extras">
+            <img id="image-weather-today" alt="weather today">
+            <iframe id="soundcloud" width="100" height="100" scrolling="no" frameborder="yes" style="white" src=""></iframe>
             <div id="word-cloud"></div>
-          </div>
-        </div>
+      </div>
+    </div>
         <section id="map">
           <div id="global-options" class="column">
             <div id="main-map"></div>
-            <label id="city-label">Choose a global city from this list:
+            <label id="city-label">Choose a global city then scroll up to see the details:
               <select id="city-input"></label>
                 <option value="">select a city</option>
                 <option value="19344">Edinburgh</option>
